--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="waterBlue">#B9DDFF</color>
+    <color name="extremlyLightGray">#F9F9F9</color>
+
 </resources>
